# Ramos

./: README.md
ProyectoDeEspecialidad/2021-1-Grupo12-Backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  deploy.sh  development.sh  docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.yml  entrypoint.sh  init-letsencrypt.sh  init-letsencrypt.staging.sh  pyproject.toml  seed_set.sh  setup.cfg
ProyectoDeEspecialidad/2021-1-Grupo12-Backend/db_examples/: Datalist.json  FormTreev17june.json  new_answer.json
ProyectoDeEspecialidad/2021-1-Grupo12-Backend/db_seed_generator/: answer_seed_generator.py  comune_generator.py  encrypt_user_seed.py  enterprise_generator.py  province_generator.py  questions_generator.py  region_generator.py  seed_runner.py  team_generator.py  technician_generator.py  user_generator.py
ProyectoDeEspecialidad/2021-1-Grupo12-Backend/nginx/prod/: default.conf
ProyectoDeEspecialidad/2021-1-Grupo12-Backend/nginx/staging/: default.conf
ProyectoDeEspecialidad/2021-1-Grupo12-Backend/osam_backend/: config.py  manage.py
ProyectoDeEspecialidad/2021-1-Grupo12-Backend/osam_backend/backend_app/: middleware.py  models.py  urls.py
ProyectoDeEspecialidad/2021-1-Grupo12-Backend/osam_backend/backend_app/db_constants/: filters.py
ProyectoDeEspecialidad/2021-1-Grupo12-Backend/osam_backend/conf/: gunicorn_config.py
ProyectoDeEspecialidad/2021-1-Grupo12-Backend/osam_backend/osam_backend/: asgi.py  urls.py  wsgi.py
ProyectoDeEspecialidad/2021-1-Grupo12-Backend/osam_backend/tests/: precommits.py
(+1101 files in other folders)
